erDiagram
    users ||--o{ user_skills : "has"
    users ||--o{ user_availabilities : "has"
    users ||--o{ mentorship_posts : "creates"
    users ||--o{ matches : "is mentor"
    users ||--o{ matches : "is mentee"
    users ||--o{ messages : "sends"
    
    skills ||--o{ user_skills : "is related to"
    skills ||--o{ mentorship_posts : "is target of"
    skills ||--o{ matches : "is topic of"

    mentorship_posts ||--o{ post_availabilities : "has"
    mentorship_posts ||--o{ matches : "as offer"
    mentorship_posts ||--o{ matches : "as request"

    matches ||--|| conversations : "generates"
    conversations ||--o{ messages : "contains"

    users {
        int id PK
        string first_name
        string last_name
        string email UK
        string phone_number UK
        string password_hash
        string profile_photo
        string field_of_study
        string level
        string bio
        timestamp created_at
        timestamp updated_at
    }

    skills {
        int id PK
        string name UK
        timestamp created_at
    }

    user_skills {
        int user_id PK, FK
        int skill_id PK, FK
        string proficiency
    }

    user_availabilities {
        int id PK
        int user_id FK
        string day_of_week
        time start_time
        time end_time
    }

    mentorship_posts {
        int id PK
        int user_id FK
        string type
        int skill_id FK
        string mode
        string description
        boolean is_active
        timestamp created_at
        timestamp updated_at
    }

    post_availabilities {
        int id PK
        int post_id FK
        string day_of_week
        time start_time
        time end_time
    }

    matches {
        int id PK
        int mentor_id FK
        int mentee_id FK
        int offer_post_id FK
        int request_post_id FK
        int skill_id FK
        decimal score
        string status
        timestamp created_at
    }

    conversations {
        int id PK
        int match_id FK "UK"
        timestamp created_at
        timestamp updated_at
    }

    messages {
        int id PK
        int conversation_id FK
        int sender_id FK
        string content
        boolean is_read
        timestamp created_at
    }
